# flowcar.pt

./: Makefile  dev.sh
.github/workflows/: deployment.yml  platform.yml
k8s/base/: kustomization.yaml
k8s/base/database/: postgres-deployment.yaml  postgres-job.yaml  postgresql-config.yaml
k8s/base/deployments/: flowcar-deployment.yaml  postgres-deployment.yaml
k8s/base/ingress/: flowcar-ingress.yaml
k8s/base/jobs/: postgres-job.yaml
k8s/base/resources/: db.sql
k8s/base/services/: flowcar-service.yaml  postgres-service.yaml
k8s/base/volumes/: postgres-persistent-volume-claim.yaml  postgres-persistent-volume.yaml
k8s/base/webapp/: flowcar-deployment.yaml
k8s/overlays/docker/: kustomization.yaml
k8s/overlays/local/: kustomization.yaml
k8s/overlays/local/ingress/: postgres-ingress.yaml
k8s/overlays/production/: kustomization.yaml
webapp/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
webapp/end2end/tests/: homepage.spec.ts
webapp/integration/: package-lock.json  package.json
webapp/src/: app.rs  auth.rs  database.rs  lib.rs  main.rs  server.rs  state.rs
webapp/src/components/: card.rs  details.rs  error.rs  footer.rs  gallery.rs  list.rs  mod.rs  nav.rs  pagination.rs  summary.rs  toast.rs
webapp/src/components/auth/: create_user.rs  login.rs  logout.rs  mod.rs  profile.rs
webapp/src/components/reviews/: card.rs  header.rs  mod.rs  rating.rs
webapp/src/components/vehicle/: card.rs  details.rs  feature.rs  gallery.rs  list.rs  mod.rs  search.rs  summary.rs
webapp/src/models/: mod.rs  user.rs  vehicle.rs
webapp/src/models/review/: mod.rs
webapp/src/models/vehicle/: category.rs  fuel.rs  mod.rs  transmission.rs
webapp/src/pages/: home.rs  listings.rs  mod.rs  not_found.rs  profile.rs  search.rs  vehicle.rs
webapp/style/: _login.scss  _ratios.scss  main.scss
